--- a/pcg_paper.css
+++ b/pcg_paper.css
@@ -31,30 +31,6 @@ body {
 	font-family:'Palatino Linotype','Book Antiqua', Palatino, serif;
 }	
  
-
- body > header > img {
-    display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 60%;
-	border: 5px solid gray;
-	
- }
- 
-content {
-	 width: 79%;
- }
- 
- h1, h2 {
-	text-align: center;
-}
-
-
-p {
-	padding-right:15px;
-	padding-left:15px;
-}
-
 body > header {
 	background-color: rgb(82,71,55);
 	height:150px;
@@ -62,6 +38,34 @@ body > header {
 	padding-bottom: 10px; 
 	width:100%
 }
+
+body > header > img {
+    display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 60%;
+	border: 5px solid gray;
+}
+
+body > div#group1 {
+	width: 24%;
+	float: left;
+	margin-right: 2%;
+}
+ 
+content {
+	width: 79%;
+}
+ 
+h1, h2 {
+	text-align: center;
+}
+
+p {
+	padding-right:15px;
+	padding-left:15px;
+}
+
 	
 /* nav */ 
 nav.storiesinside {
@@ -111,17 +115,17 @@ nav.sidemenu div {
 	padding-bottom: 20px;
 }
  
- nav.sidemenu li {
+nav.sidemenu li {
 	display: block;
 	float: center;
 	width: 100%;
 }
 
- nav.sidemenu a {
+nav.sidemenu a {
 	text-decoration: none;
 }
 
- nav.sidemenu a:link, nav.sidemenu:visited {
+nav.sidemenu a:link, nav.sidemenu:visited {
    color: rgb(181,40,100);
 }
 
@@ -130,14 +134,16 @@ nav.sidemenu a:hover, nav.sidemenu:active {
 }
 
 
-
-
 /* article section */
 
 article {
 	display: inline;
-	float: right;
-	width: 79%;
+	float: left;
+	width: 55%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 12%;
+    padding-right: 12%;
 }
 
 article figure {
@@ -168,6 +174,7 @@ article#Story3 {
 	background-color: rgb(185,141,154);
 }
 
+
 /* aside */ 
 
 aside {
@@ -197,9 +204,4 @@ footer{
 	display: table;
 }
 
-body > div#group1 {
-	width: 24%;
-	float: left;
-	margin-right: 2%;
-}
 
