--- a/pcg_paper.css
+++ b/pcg_paper.css
@@ -16,12 +16,33 @@
 
 
 
+
+
+/*------------------------------------*\
+  #GLOBAL SECTION
+\*------------------------------------*/
+
 html {
 	background-color: rgb(210,190,150);
 }
 
+h1,
+h2 {
+	text-align: center;
+}
 
-/* body */ 
+p {
+	padding-right: 15px;
+	padding-left: 15px;
+}
+
+
+
+
+
+/*------------------------------------*\
+  #BODY SECTION
+\*------------------------------------*/ 
 
 body {
 	margin: 0 auto;
@@ -33,18 +54,18 @@ body {
  
 body > header {
 	background-color: rgb(82,71,55);
-	height:150px;
-	padding-top:10px;
+	height: 150px;
+	padding-top: 10px;
 	padding-bottom: 10px; 
-	width:100%
+	width: 100%
 }
 
 body > header > img {
-    display: block;
+	border: 5px solid gray;
 	margin-left: auto;
 	margin-right: auto;
 	width: 60%;
-	border: 5px solid gray;
+    display: block;
 }
 
 body > div#group1 {
@@ -56,25 +77,21 @@ body > div#group1 {
 content {
 	width: 79%;
 }
- 
-h1, h2 {
-	text-align: center;
-}
 
-p {
-	padding-right:15px;
-	padding-left:15px;
-}
 
+
+
+/*------------------------------------*\
+  #STORIES-INSIDE SECTION
+\*------------------------------------*/ 
 	
-/* nav */ 
-nav.storiesinside {
-	background-color:rgb(182,153,155);
-	float: left;
-	width: 100%;
-	display:vertical;
+nav.stories-inside {
+	background-color: rgb(182,153,155);
+	float: right;
+	width: 79%;
+	display: vertical;
 	padding-bottom: 10px;
-	
+	font-size: 1.3em;
 }
 
 nav li {
@@ -84,18 +101,25 @@ nav li {
 div.left {
 	display: block;
 	float: left;
-	width: 33%;
-	padding-left: 16%;
+	width: 49%;
+	padding-left: 1%;
 	text-align: right;
 }
 
 div.right {
 	display: block;
 	float: right;
-	width: 33%;
-	padding-right: 17%;
+	width: 49%;
+	padding-right: 1%;
 	text-align: left;
 }
+
+
+
+
+/*------------------------------------*\
+  #SIDEMENU SECTION
+\*------------------------------------*/
 
 nav.sidemenu {
 	float: left;
@@ -134,7 +158,12 @@ nav.sidemenu a:hover, nav.sidemenu:active {
 }
 
 
-/* article section */
+
+
+
+/*------------------------------------*\
+  #ARTICLE SECTION
+\*------------------------------------*/
 
 article {
 	display: inline;
@@ -144,11 +173,13 @@ article {
     margin-right: auto;
     padding-left: 12%;
     padding-right: 12%;
+	box-shadow: 6px 6px;
 }
 
 article figure {
 	float: right;
 	text-align: center;
+	box-shadow: 4px 4px;
 }
 
 article#Story1 figure  {
@@ -175,16 +206,22 @@ article#Story3 {
 }
 
 
-/* aside */ 
+
+
+
+/*------------------------------------*\
+  #ASIDE 
+\*------------------------------------*/
 
 aside {
 	background-color: rgba(82,71,55,0.7);
 	display: block;
-	width: 50%;
+	width: 80%;
 	margin-left: auto;
 	margin-right: auto;
 	border: 2px solid black;
 	padding-top: 6px;
+	box-shadow: 5px 5px;
 }
 
 aside li {
@@ -193,6 +230,14 @@ aside li {
 	padding-right:15px;
 	padding-left:15px;
 }
+
+
+
+
+
+/*------------------------------------*\
+  #FOOTER
+\*------------------------------------*/
 
 footer{  
 	background-color: rgba(82,71,55,0.9);
